--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,26 @@ button:hover{
   top: 0;
 }
 
+
+.blogs{
+  color: aliceblue;
+  margin: 50px;
+}
+
+header{
+  text-align: center;
+}
+
+.blog{
+  padding: 50px 100px;
+  background-color: #171717;
+  margin: 20px;
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+
+
+
 @media only screen and (max-width: 700px) {
   .box-container {
     padding: 0 20px;
