--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,8 @@ header{
   padding: 50px 100px;
   background-color: #171717;
   margin: 20px;
-  border: 1px solid gray;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
   border-radius: 10px;
 }
 
