--- a/styles.css
+++ b/styles.css
@@ -197,6 +197,7 @@ button:hover{
   top: 0;
 }
 
+/* Blog page work */
 
 .blogs{
   color: aliceblue;
@@ -207,6 +208,8 @@ header{
   text-align: center;
   font-size: 30px;
 }
+
+
 .highlight{
   color: rgb(255, 170, 0);
 }
@@ -221,7 +224,7 @@ header{
 }
 
 
-
+/* responsive for small device */
 
 @media only screen and (max-width: 700px) {
   .box-container {
